fixed navbar overflow

--- a/styles.css
+++ b/styles.css
@@ -36,7 +36,7 @@ h1{
     padding-left:0px;
     padding-right: 0px;
     width: 100%;
-
+    display: flex;
 }
 
 .topnav a{
